src/assets/css/Game/ModalRules.css
.modalRulesLibBackground {
  width: 100vw;
  height: 100vh;
  background-color: rgba(200, 200, 200, 0.7);
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  top: 0px;
  border: none;
  white-space: normal;
  z-index: 15;
}

.modalRulesLibContainer {
  width: 100%;
  height: 100%;
  border-radius: 12px;
  background-color: var(--bg-color-opacity);
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  display: flex;
  flex-direction: column;
  padding: 25px;
  border: none;
  overflow-y: scroll;
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
  scrollbar-color: rebeccapurple green;
}

::-webkit-scrollbar {
  display: none;
}

.modalRulesLibContainer .modalRulesLibTitle {
  text-align: center;
  color: #c89d3e;
  font-size: 2.5rem;
}

.modalRulesLibContainer .modalRulesLibTitle h2 {
  font-size: 2.2rem;
  margin-bottom: 0.5rem;
}

.modalRulesLibTitleCloseBtn {
  display: flex;
  justify-content: space-between;
  background-color: transparent;
  border: none;
  font-size: 2rem;
  cursor: pointer;
  color: #c89d3e;
}

.modalRulesLibContainer p {
  text-align: left;
}

.modalRulesLibContainer h3 {
  text-align: left;
  color: #c89d3e;
}

.modalRulesPhases p{
  text-align: center;
}

.modalRotate{
  display:none;
}

@media screen and (max-width: 1023px) and (orientation:portrait) {
  .modalRotate { 
    display:flex;
    align-items: center; 
    justify-content: center;
    position:fixed;
    width: 100vw;
    height: 100vh;
    z-index: 14;
    background-color:var(--bg-color-opacity)

  }
  .modalRotate img{
    padding:2%;
    height:50%;
    max-width:100%;
  }
}

